<resources>
    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">PrimerParcialArq</string>
    <string name="developer">Alan Romero</string>
    <string name="desarrollo">Desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <!-- VISTA MAIN -->
    <string name="btn_productos">Gestionar Productos</string>
    <string name="btn_categorias">Gestionar Categorías</string>
    <string name="btn_clientes">Gestionar Clientes</string>
    <string name="btn_catalogos">Gestionar Catálogos</string>
    <string name="btn_ventas">Gestionar Ventas</string>

    <!-- VISTA CATEGORIA -->
    <string name="hint_categoria">Descripción de la categoría</string>
    <string name="btn_agregar_categoria">Crear</string>

</resources>