<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_productos"
        android:maxWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btnCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_categorias"
        android:maxWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProductos"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clientes"
        android:maxWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCategorias"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btnCatalogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_catalogos"
        android:maxWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClientes"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btnVentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ventas"
        android:maxWidth="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCatalogos"
        app:layout_constraintHorizontal_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
